--- a/PlexAppClient/res/values/strings.xml
+++ b/PlexAppClient/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="tab_a">My Photos</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
+    <string name="title_activity_movie_browser">MovieBrowserActivity</string>
 
 </resources>
