--- a/PlexAppClient/res/values/strings.xml
+++ b/PlexAppClient/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_movie_browser">MovieBrowserActivity</string>
+    <string name="title_activity_main">MainActivity</string>
 
 </resources>
