--- a/PlexAppClient/res/values/strings.xml
+++ b/PlexAppClient/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">PlexAppClient</string>
+    <string name="app_name">Serenity for Google TV</string>
     <string name="list_c">George</string>
     <string name="list_b">Obama</string>
     <string name="list_a">Lincoln</string>
@@ -11,8 +11,8 @@
     <string name="tab_a">My Photos</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    <string name="title_activity_movie_browser">MovieBrowserActivity</string>
-    <string name="title_activity_main">MainActivity</string>
-    <string name="title_activity_tvbrowser_show">TVBrowserShowActivity</string>
+    <string name="title_activity_movie_browser">Movies</string>
+    <string name="title_activity_main">Serenity->Main Menu</string>
+    <string name="title_activity_tvbrowser_show">TV Shows</string>
 
 </resources>
