--- a/PlexAppClient/res/values/strings.xml
+++ b/PlexAppClient/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="title_activity_main">Serenity for Google TV</string>
     <string name="title_activity_tvbrowser_show">TV Shows</string>
     <string name="title_activity_tvbrowser_show_season">TV Shows Seasons</string>
+    <string name="title_activity_tvbrowser_show_episodes">TV Shows Episodes</string>
     
 </resources>
