Very basic dumb internal video player implemented.
This just takes the direct play url and passes it off to be played
no custom overlays/MediaController is implemented.

--- a/PlexAppClient/res/values/strings.xml
+++ b/PlexAppClient/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="title_activity_tvbrowser_show">TV Shows</string>
     <string name="title_activity_tvbrowser_show_season">TV Shows Seasons</string>
     <string name="title_activity_tvbrowser_show_episodes">TV Shows Episodes</string>
+    <string name="video_title">Video Player</string>
     
 </resources>
