--- a/serenity-app/res/values/strings.xml
+++ b/serenity-app/res/values/strings.xml
@@ -2,6 +2,8 @@
 <resources>
 
     <string name="app_name">Serenity for Google TV</string>
+    <string name="app_label">Serenity for Google TV</string>
+    <string name="search_hint">Enter a word or phrase in a Movie, TV Show, or Episode.</string>
     <string name="list_c">George</string>
     <string name="list_b">Obama</string>
     <string name="list_a">Lincoln</string>
@@ -9,8 +11,8 @@
     <string name="tab_c">Home</string>
     <string name="tab_b">My Friends</string>
     <string name="tab_a">My Photos</string>
-    <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
+    <string name="menu_search">Search</string>
     <string name="title_activity_movie_browser">Movies</string>
     <string name="title_activity_main">Serenity for Google TV</string>
     <string name="title_activity_tvbrowser_show">TV Shows</string>
@@ -19,22 +21,5 @@
     <string name="video_title">Video Player</string>
     <string name="movie_category_prompt">Choose a Category</string>
     <string name="movie_category_prompt2">Genre/Collection</string>
-    
-    <string-array name="plex_video_categories">
-        <item>All</item>
-        <item>Unwatched</item>
-        <item>Newest</item>
-        <item>On Deck</item>
-        <item>Genre</item>
-        <item>Year</item>
-        <item>Decade</item>
-        <item>Director</item>
-        <item>Actor</item>
-        <item>Country</item>
-        <item>Content Rating</item>
-        <item>Rating</item>
-        <item>Resolution</item>
-        <item>First Letter</item>
-    </string-array>
-    
+        
 </resources>
