--- a/serenity-app/res/values/strings.xml
+++ b/serenity-app/res/values/strings.xml
@@ -21,6 +21,35 @@
     <string name="writers">Writers</string>
     <string name="directors">Directors</string>
     <string name="tvshows">TV Shows:</string>
+    <string name="about_title_serenity_for_google_tv">Serenity for Google TV</string>
+    <string name="options_main_about">About</string>
+    <string name="options_main_clear_image_cache">Clear Image Cache</string>
+    <string name="option_clear_the_image_cache_">Clear the Image Cache?</string>
+    <string name="clear">Clear</string>
+    <string name="cancel">Cancel</string>
+    <string name="download_manager_download_complete_for_">"Download complete for "</string>
+    <string name="no_libraries_found">No Movies or TV Show Libraries found. Use the Plex Web App to add some.</string>
+    <string name="unknown">Unknown</string>
+    <string name="season_">"Season "</string>
+    <string name="episode_">"Episode "</string>
+    <string name="settings">Settings</string>
+    <string name="search">Search</string>
+    <string name="no_entries_available_for_category_">No Entries available for category.</string>
+    <string name="retrieving_movies">Retrieving Movies</string>
+    <string name="no_shows_found_for_the_category_">"No Shows found for the category: "</string>
+    <string name="_item_s_">" Item(s)"</string>
+    <string name="watched_">Watched:</string>
+    <string name="unwatched_">Unwatched:</string>
+    <string name="retrieving_episodes">Retrieving Episodes</string>
+    <string name="button_ok">OK</string>
+    <string name="new_folder">New folder</string>
+    <string name="new_folder_name">New folder name</string>
+    <string name="toggle_watched_status">Toggle Watched Status</string>
+    <string name="download_video_to_device">Download Video to Device</string>
+    <string name="play_on_tv">Play on TV</string>
+    <string name="starting_download_of_">"Starting download of "</string>
+    <string name="chosen_directory_">"Chosen directory: "</string>
+    <string name="no_videos_found_that_match_the_search_criteria">No videos found that match the search criteria</string>
     
 
 </resources>
