Issue #55: Fix externalized strings that were display numerics.
There were a few cases where the external strings were displaying numeric
values instead of the string value.

--- a/serenity-app/res/values/strings.xml
+++ b/serenity-app/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="starting_download_of_">"Starting download of "</string>
     <string name="chosen_directory_">"Chosen directory: "</string>
     <string name="no_videos_found_that_match_the_search_criteria">No videos found that match the search criteria</string>
+    <string name="video_options">Video Options</string>
     
 
 </resources>
