--- a/serenity-app/res/values/strings.xml
+++ b/serenity-app/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Serenity for Google TV</string>
-    <string name="app_label">Serenity for Google TV</string>
+    <string name="app_name">Serenity for Android</string>
+    <string name="app_label">Serenity for Android</string>
     <string name="search_hint">Enter a word or phrase in a Movie, TV Show, or Episode.</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_search">Search</string>
@@ -21,7 +21,7 @@
     <string name="writers">Writers</string>
     <string name="directors">Directors</string>
     <string name="tvshows">TV Shows:</string>
-    <string name="about_title_serenity_for_google_tv">Serenity for Google TV</string>
+    <string name="about_title_serenity_for_google_tv">Serenity for Android</string>
     <string name="options_main_about">About</string>
     <string name="options_main_clear_image_cache">Clear Image Cache</string>
     <string name="option_clear_the_image_cache_">Clear the Image Cache?</string>
