Add Options menu to the Main Menu and speed up main menu.
Added the Options menu to the main menu so that it is more intuitive to
get to.  As well moved the main menu background image loading to a backround
task as it can take a bit.  this seems to speed up the main menu a bit when
navigating back and forth.

--- a/serenity-app/res/values/strings.xml
+++ b/serenity-app/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="episode_">"Episode "</string>
     <string name="settings">Settings</string>
     <string name="search">Search</string>
+    <string name="options">Options</string>
     <string name="no_entries_available_for_category_">No Entries available for category.</string>
     <string name="retrieving_movies">Retrieving Movies</string>
     <string name="no_shows_found_for_the_category_">"No Shows found for the category: "</string>
