Issue #85: Fast way to go to All Episodes in an Season for a Show.
A new context menu has been added when in the OnDeck, Recently Added, and
Recently Viewed filter categories.  Selecting View All Episodes will bring
up a list of all episodes within the same season as the episode that
was selected.

--- a/serenity-app/res/values/strings.xml
+++ b/serenity-app/res/values/strings.xml
@@ -52,7 +52,8 @@
     <string name="chosen_directory_">"Chosen directory: "</string>
     <string name="no_videos_found_that_match_the_search_criteria">No videos found that match the search criteria</string>
     <string name="video_options">Video Options</string>
-
+    <string name="view_all_episodes">View All Episodes</string>
+    
    <string-array name="categoryListNames">
         <item>All</item>
         <item>Newest</item>
