Add Spanish translations.

--- a/serenity-app/res/values/strings.xml
+++ b/serenity-app/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="menu_settings">Settings</string>
     <string name="menu_search">Search</string>
     <string name="title_activity_movie_browser">Movies</string>
-    <string name="title_activity_main">Serenity for Google TV</string>
+    <string name="title_activity_main">Serenity for Android</string>
     <string name="title_activity_tvbrowser_show">TV Shows</string>
     <string name="title_activity_tvbrowser_show_season">TV Shows Seasons</string>
     <string name="title_activity_tvbrowser_show_episodes">TV Shows Episodes</string>
