--- a/serenity-app/res/values/strings.xml
+++ b/serenity-app/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <string name="app_name">Serenity for Android</string>
     <string name="app_label">Serenity for Android</string>
@@ -116,4 +116,10 @@
     <string name="tutorial">Tutorial</string>
     <string name="auto_configuring_server_using_">"Auto configuring server using "</string>
 
+    <string name="changelog_full_title">Serenity for Android Change Log</string>
+    <string name="changelog_title">What\'s New</string>
+    <string name="changelog_ok_button">OK</string>
+    <string name="changelog_show_full">More…</string>
+
+    <string name="changelog_version_format">Version <xliff:g id="version_name">%s</xliff:g></string>    
 </resources>
