--- a/serenity-app/res/values/strings.xml
+++ b/serenity-app/res/values/strings.xml
@@ -139,5 +139,9 @@
     <string name="rate_">"Rate "</string>    
     <string name="cast_fling_with_">Cast/Fling with...</string>    
     <string name="add_video_to_queue">Add video to queue</string>    
-    <string name="there_are_still_videos_int_the_queue_">There are still videos int the queue.</string>    
+    <string name="there_are_still_videos_int_the_queue_">There are still videos int the queue.</string>
+        
+    <string name="remote_control_menu_summary">When enabled the menu key will bring up the slide out menu, otherwise it will activate the context menu for an item if available.</string>    
+    <string name="enable_sliding_menu">Enable Sliding Menu</string>    
+    <string name="preference_remote_control">Remote Control</string>    
 </resources>
