Issue #153: Add all Context menu option
New context menu for the seasons browser to add all items to the Video
queue.  Also enable the short cut keys for navigation.

--- a/serenity-app/res/values/strings.xml
+++ b/serenity-app/res/values/strings.xml
@@ -148,4 +148,6 @@
     <string name="overscan_adjustement_summary">Adjusts the screen so that items are not cut off.  May be necessary when running on OUYA or other Android TV devices.</string>    
     <string name="overscan_compensation">Overscan Compensation</string>    
     <string name="display_adjustements">Display Adjustements</string>    
+    <string name="add_season_to_queue">Add Season to Queue</string>    
+    <string name="season_options">Season Options</string>    
 </resources>
