Update playback position UI when returning from playing a video.

--- a/serenity-app/res/values/strings.xml
+++ b/serenity-app/res/values/strings.xml
@@ -149,6 +149,8 @@
     <string name="overscan_compensation">Overscan Compensation</string>    
     <string name="display_adjustements">Display Adjustements</string>    
     <string name="add_season_to_queue">Add season to queue</string>    
-    <string name="season_options">Season Options</string>
+    <string name="season_options">Season Options</string>    
+    <string name="preferred_external_player_summary">This selection allows the choosing of what external player will be used to play back video content. Not all players support all functionality.  MX Player and MX Player pro support the ability to update the Plex playback position.  The System Default will just launch what ever the system default player is, and has limited functionality.  If you need specific functionality make sure to select a particular player.</string>    
+    <string name="preferred_external_player">Preferred External Player</string>
         
 </resources>
